Fixed script for the final version